kubernetes/production/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-$CI_ENVIRONMENT_SLUG
  namespace: $KUBE_NAMESPACE
  labels:
    app: app-$CI_ENVIRONMENT_SLUG
    pipeline_id: "$CI_PIPELINE_ID"
    build_id: "$CI_JOB_ID"
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"80":"app-$CI_ENVIRONMENT_SLUG"}}'    
spec:
  ports:
  - port: 80
    targetPort: $PORT
    name: app-$CI_ENVIRONMENT_SLUG
  selector:
    app: app-$CI_ENVIRONMENT_SLUG
  type: NodePort
